--- a/manifest.json
+++ b/manifest.json
@@ -1,30 +1,122 @@
 {
+	"_version": "1.12.0",
 	"sap.app": {
-		"id": "com.sap.postActivity",
+		"id": "ZPROD_CONF1",
+		"type": "application",
+		"i18n": "i18n/i18n.properties",
 		"applicationVersion": {
 			"version": "1.0.0"
+		},
+		"title": "{{appTitle}}",
+		"description": "{{appDescription}}",
+		"sourceTemplate": {
+			"id": "servicecatalog.connectivityComponentForManifest",
+			"version": "0.0.0"
+		},
+		"dataSources": {
+			"ZPTMPROD_CONF_SRV": {
+				"uri": "/sap/opu/odata/sap/ZPTMPROD_CONF_SRV/",
+				"type": "OData",
+				"settings": {
+					"localUri": "localService/metadata.xml"
+				}
+			}
+		}
+	},
+	"sap.ui": {
+		"technology": "UI5",
+		"icons": {
+			"icon": "",
+			"favIcon": "",
+			"phone": "",
+			"phone@2": "",
+			"tablet": "",
+			"tablet@2": ""
+		},
+		"deviceTypes": {
+			"desktop": true,
+			"tablet": true,
+			"phone": true
 		}
 	},
 	"sap.ui5": {
+		"flexEnabled": false,
 		"rootView": {
-			"viewName": "com.sap.postActivity.view.postActivity",
+			"viewName": "ZPROD_CONF1.view.View1",
 			"type": "XML",
-			"async": true
+			"async": true,
+			"id": "View1"
 		},
 		"dependencies": {
+			"minUI5Version": "1.65.6",
 			"libs": {
-				"sap.m": {}
+				"sap.m": {},
+				"sap.ui.core": {},
+				"sap.ui.layout": {},
+				"sap.ui.unified": {}
 			}
 		},
-		"config": {
-			"sample": {
-				"stretch": true,
-				"files": [
-					"view/postActivity.view.xml",
-					"controller/postActivity.controller.js",
-					"manifest.json"
-				]
+		"contentDensities": {
+			"compact": true,
+			"cozy": true
+		},
+		"models": {
+			"i18n": {
+				"type": "sap.ui.model.resource.ResourceModel",
+				"settings": {
+					"bundleName": "ZPROD_CONF1.i18n.i18n"
+				}
+			},
+			"": {
+				"type": "sap.ui.model.odata.v2.ODataModel",
+				"settings": {
+					"defaultOperationMode": "Server",
+					"defaultBindingMode": "OneWay",
+					"defaultCountMode": "Request"
+				},
+				"dataSource": "ZPTMPROD_CONF_SRV",
+				"preload": true
+			}
+		},
+		"resources": {
+			"css": [
+				{
+					"uri": "css/style.css"
+				}
+			]
+		},
+		"routing": {
+			"config": {
+				"routerClass": "sap.m.routing.Router",
+				"viewType": "XML",
+				"async": true,
+				"viewPath": "ZPROD_CONF1.view",
+				"controlAggregation": "pages",
+				"controlId": "Production Order Confirmation",
+				"clearControlAggregation": false
+			},
+			"routes": [
+				{
+					"name": "RouteView1",
+					"pattern": "RouteView1",
+					"target": [
+						"TargetView1"
+					]
+				}
+			],
+			"targets": {
+				"TargetView1": {
+					"viewType": "XML",
+					"transition": "slide",
+					"clearControlAggregation": false,
+					"viewId": "View1",
+					"viewName": "View1"
+				}
 			}
 		}
+	},
+	"sap.platform.abap": {
+		"uri": "/sap/bc/ui5_ui5/sap/zpostactivity",
+		"_version": "1.1.0"
 	}
 }
