--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -1,7 +1,7 @@
 {
-	"_version": "1.12.0",
+	"_version": "1.7.0",
 	"sap.app": {
-		"id": "PostActivityactivityConfirmation",
+		"id": "com.sap.activityConfirmation",
 		"type": "application",
 		"i18n": "i18n/i18n.properties",
 		"applicationVersion": {
@@ -10,12 +10,12 @@
 		"title": "{{appTitle}}",
 		"description": "{{appDescription}}",
 		"sourceTemplate": {
-			"id": "servicecatalog.connectivityComponentForManifest",
-			"version": "0.0.0"
+			"id": "ui5template.basicSAPUI5ApplicationProject",
+			"version": "1.40.12"
 		},
 		"dataSources": {
 			"ZPTMPROD_CONF_SRV": {
-				"uri": "/sap/opu/odata/sap/ZPTMPROD_CONF_SRV/",
+				"uri": "/sap/opu/odata/sap/ZPTMPOST_ACT_SRV/",
 				"type": "OData",
 				"settings": {
 					"localUri": "localService/metadata.xml"
@@ -37,23 +37,27 @@
 			"desktop": true,
 			"tablet": true,
 			"phone": true
-		}
+		},
+		"supportedThemes": [
+			"sap_hcb",
+			"sap_belize"
+		]
 	},
 	"sap.ui5": {
-		"flexEnabled": false,
 		"rootView": {
-			"viewName": "com.sap.PostActivityactivityConfirmation.view.View1",
-			"type": "XML",
-			"async": true,
-			"id": "View1"
+			"viewName": "com.sap.activityConfirmation.view.homeView",
+			"type": "XML"
 		},
 		"dependencies": {
-			"minUI5Version": "1.65.6",
+			"minUI5Version": "1.30.0",
 			"libs": {
-				"sap.m": {},
 				"sap.ui.core": {},
+				"sap.m": {},
 				"sap.ui.layout": {},
-				"sap.ui.unified": {}
+				"sap.ushell": {},
+				"sap.collaboration": {},
+				"sap.ui.comp": {},
+				"sap.uxap": {}
 			}
 		},
 		"contentDensities": {
@@ -64,7 +68,7 @@
 			"i18n": {
 				"type": "sap.ui.model.resource.ResourceModel",
 				"settings": {
-					"bundleName": "com.sap.PostActivityactivityConfirmation.i18n.i18n"
+					"bundleName": "com.sap.activityConfirmation.i18n.i18n"
 				}
 			},
 			"": {
@@ -84,39 +88,10 @@
 					"uri": "css/style.css"
 				}
 			]
-		},
-		"routing": {
-			"config": {
-				"routerClass": "sap.m.routing.Router",
-				"viewType": "XML",
-				"async": true,
-				"viewPath": "com.sap.PostActivityactivityConfirmation.view",
-				"controlAggregation": "pages",
-				"controlId": "Production Order Confirmation",
-				"clearControlAggregation": false
-			},
-			"routes": [
-				{
-					"name": "RouteView1",
-					"pattern": "RouteView1",
-					"target": [
-						"TargetView1"
-					]
-				}
-			],
-			"targets": {
-				"TargetView1": {
-					"viewType": "XML",
-					"transition": "slide",
-					"clearControlAggregation": false,
-					"viewId": "View1",
-					"viewName": "View1"
-				}
-			}
 		}
 	},
 	"sap.platform.abap": {
-		"uri": "/sap/bc/ui5_ui5/sap/zpostactivity/webapp",
+		"uri": "/sap/bc/ui5_ui5/sap/zactivityconf/webapp",
 		"_version": "1.1.0"
 	}
 }
