--- a/.project.json
+++ b/.project.json
@@ -35,12 +35,12 @@
     "blockPushLevel": "Error"
   },
   "build": {
-    "buildRequired": true,
+    "buildRequired": false,
     "sourceFolder": "webapp",
     "targetFolder": "dist",
     "excludedFolders": [],
     "excludedFiles": [],
-    "lastBuildDateTime": "Tue, 01 Jun 2021 10:39:04 GMT"
+    "lastBuildDateTime": "Thu, 03 Jun 2021 10:54:54 GMT"
   },
   "deploy": {
     "destination": "DE4",
